--- a/app/src/main/java/com/example/golgerburguer/AndroidManifest.xml
+++ b/app/src/main/java/com/example/golgerburguer/AndroidManifest.xml
@@ -27,10 +27,10 @@
             </intent-filter>
         </activity>
 
-        <!-- [CORRECCIÓN FINAL] Se añade el FileProvider para que la cámara funcione -->
+        <!-- [CORRECCIÓN FINAL] Se ajusta la autoridad para que coincida con el código funcional -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="${applicationId}.fileprovider" 
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
